<resources>
    <string name="app_name">FitMarket</string>
    <string name="direccion">Avenida Rivadavia 4370</string>

    <string name="inicio">Inicio</string>
    <string name="progreso">Progreso</string>
    <string name="promociones">Promociones</string>
    <string name="pedidos">Pedidos</string>

    <string name="creatina">Creatina</string>
    <string name="omega_3">Omega-3</string>
    <string name="pre_entreno">Pre-entreno</string>
    <string name="proteina">Proteína</string>

    <string name="menu">Menu</string>
    <string name="carrito">Carrito</string>
    <string name="buscar">Buscar</string>
    <string name="ubicacion">Ubicación</string>

    <!-- LOGIN -->
    <string name="bienvenida_login">¡Bienvenido a FitMarket!</string>
    <string name="subtitulo_login">Inicia sesión o crea tu cuenta para continuar</string>
    <string name="tab_iniciar_sesion">INICIAR SESIÓN</string>
    <string name="tab_crear_cuenta">CREAR CUENTA</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="olvidaste_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="boton_iniciar_sesion">INICIAR SESIÓN</string>
    <string name="continua_con">O continúa con</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta? Crear cuenta</string>


    <!-- REGISTRO -->
<string name="bienvenida_registro">¡Creá tu cuenta!</string>
<string name="subtitulo_registro">Completá tus datos para empezar</string>
<string name="hint_nombre">Nombre completo</string>
<string name="hint_email_registro">Correo electrónico</string>
<string name="hint_password_registro">Contraseña</string>
<string name="hint_confirmar_password">Confirmar contraseña</string>
<string name="boton_crear_cuenta">CREAR CUENTA</string>
<string name="ya_tienes_cuenta">¿Ya tenés cuenta? Iniciar sesión</string>

    </resources>